# taicnote

./: README.md  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CopyToClipBoardButton.tsx
src/components/AnswerList/: index.tsx
src/components/Note/: index.tsx
src/components/QuestionArea/: index.tsx
